--- a/angular/symphony/package.json
+++ b/angular/symphony/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@ngx-env/builder": "^17.2.3",
     "axios": "^1.6.7",
+    "bootstrap": "^5.3.3",
     "js-cookie": "^3.0.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
