--- a/angular/symphony/package.json
+++ b/angular/symphony/package.json
@@ -22,8 +22,11 @@
     "@angular/router": "^17.2.0",
     "@fortawesome/angular-fontawesome": "^0.14.1",
     "@fortawesome/fontawesome-free": "^6.5.1",
+    "@ng-bootstrap/ng-bootstrap": "^16.0.0-rc.2",
     "@ngx-env/builder": "^17.2.3",
     "axios": "^1.6.7",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "js-cookie": "^3.0.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
