--- a/Epro3.Service/Epro3.Application.csproj
+++ b/Epro3.Service/Epro3.Application.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.16" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.16">
@@ -18,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Epro3.Domain\Epro3.Domain.csproj" />
+    <ProjectReference Include="..\Epro3.Infrastructure\Epro3.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
