--- a/Epro3/Epro3.csproj
+++ b/Epro3/Epro3.csproj
@@ -30,6 +30,7 @@
 
   <ItemGroup>
     <Folder Include="Resource\Image\Course\" />
+    <Folder Include="Resource\Image\Other\" />
   </ItemGroup>
 
 </Project>
