--- a/Epro3/appsettings.json
+++ b/Epro3/appsettings.json
@@ -10,7 +10,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"default": "server=localhost;port=3306;database=visssoft;user=root;password=123456"
-    "default": "server=epro3db;port=3306;database=epro3;user=root;password=123456"
+    "default": "server=localhost;port=3306;database=visssoft;user=root;password=123456"
+    //"default": "server=epro3db;port=3306;database=epro3;user=root;password=123456"
   }
 }
